create menu, Categorie, SubCategorie, item entity create service, repository and DTO for them